[package]
name = "rust_roguelike_tutorial"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
type-uuid = "0.1"
erased-serde = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.legion]
version = "*"
path = "../legion"
default-features = false
features = ["serialize"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.legion]
version = "*"
path = "../legion"
default-features = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["wasm-bindgen"] }
