[package]
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"
name = "rust_roguelike_tutorial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
erased-serde = "0.3"
lazy_static = "1.4.0"
num-rational = "0.3"
pathfinding = "2.0.4"
regex = "1.3.9"
rltk = { version = "0.8.1", features = ["serde"] }
ron = "0.6.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
type-uuid = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.legion]
default-features = false
features = ["serialize"]
path = "external/legion"
version = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.legion]
default-features = true
path = "external/legion"
version = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["wasm-bindgen"] }
